<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>


	<properties>
		<java.version>17</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>

		<cfsVersion>1.0-SNAPSHOT</cfsVersion>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<imgui.java.version>1.86.1</imgui.java.version>
	</properties>

	<groupId>com.github.lapissea</groupId>
	<artifactId>jdatablockfs.gui</artifactId>
	<version>${cfsVersion}</version>

	<dependencies>
		<dependency>
			<groupId>com.github.lapissea</groupId>
			<artifactId>jdatablockfs.tools</artifactId>
			<version>${cfsVersion}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>io.github.spair</groupId>
			<artifactId>imgui-java-binding</artifactId>
			<version>${imgui.java.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.spair</groupId>
			<artifactId>imgui-java-lwjgl3</artifactId>
			<version>${imgui.java.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.spair</groupId>
			<artifactId>imgui-java-natives-windows</artifactId>
			<version>${imgui.java.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>${maven.compiler.release}</release>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
